Added test framework, and added lint step to CI

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,11 +1,17 @@
 {
   "env": {
     "es6": true,
-    "node": true
+    "node": true,
+    "jest/globals": true
   },
   "extends": "eslint:recommended",
+  "plugins": ["jest"],
   "parserOptions": {
-    "sourceType": "module"
+    "sourceType": "module",
+    "ecmaFeatures": {
+      "experimentalObjectRestSpread": true
+    },
+    "ecmaVersion": 8
   },
   "rules": {
     "indent": [
