--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "REST API for Explorer project",
   "main": "server/index.js",
   "scripts": {
-    "server": "node server/index.js",
+    "start": "node server/index.js",
     "test": "jest",
-    "lint": "./node_modules/.bin/eslint **/*.js --ignore-pattern node_modules/*"
+    "lint": "./node_modules/.bin/eslint **/*.js"
   },
   "repository": {
     "type": "git",
@@ -22,6 +22,7 @@
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "eslint": "^4.19.1",
+    "eslint-plugin-jest": "^21.17.0",
     "jest": "^23.1.0",
     "superagent": "^3.8.3",
     "supertest": "^3.1.0"
