--- a/package.json
+++ b/package.json
@@ -28,10 +28,11 @@
     "supertest": "^3.1.0"
   },
   "dependencies": {
-    "aws-sdk": "^2.270.1",
+    "aws-sdk": "^2.279.1",
     "express": "^4.16.3",
     "express-winston": "^2.5.1",
     "libphonenumber-js": "^1.2.15",
+    "uuid": "^3.3.2",
     "winston": "^2.4.3"
   }
 }
