--- a/package.json
+++ b/package.json
@@ -32,7 +32,10 @@
     "dynamoose": "^0.8.7",
     "express": "^4.16.3",
     "express-winston": "^2.5.1",
+    "jsonwebtoken": "^8.3.0",
     "libphonenumber-js": "^1.2.15",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
     "uuid": "^3.3.2",
     "winston": "^2.4.3"
   }
