environemnt variable setup

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "aws-sdk": "^2.279.1",
+    "dotenv": "^6.0.0",
     "dynamoose": "^0.8.7",
     "express": "^4.16.3",
     "express-winston": "^2.5.1",
