--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "libphonenumber-js": "^1.2.15",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
+    "request": "^2.87.0",
     "uuid": "^3.3.2",
     "winston": "^2.4.3"
   }
