--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -71,6 +71,12 @@ jobs:
                 # Tag and push docker image
                 docker tag $DOCKER_IMAGE:$DOCKER_TAG $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$DOCKER_IMAGE:$DOCKER_TAG
                 docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$DOCKER_IMAGE:$DOCKER_TAG
+        - run:
+            name: Create Package
+            command: zip -r ~/explorer-api.zip *
+        - run:
+            name: Deploy to S3
+            command: aws s3 cp ~/explorer-api.zip s3://explorer-source/explorer-api/explorer-api.zip
 
 workflows:
   version: 2
